--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/login/update_password.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/login/update_password.html
@@ -120,6 +120,8 @@
 											autoShow: false
 										}
 									});
+									doc.getElementById('email').value="";
+									doc.getElementById('password').value="";
 								}, 500);
 							},
 							ng: function(data) {
