--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/transaction/transevaluate.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/transaction/transevaluate.html
@@ -117,6 +117,14 @@
 			function evaluate_submit() {
 				var evaluate_flg = $("input[name='evalueate']:checked").val();
 				var evaluate_msg = $("#evaluate_msg").val();
+				if(!evaluate_flg){
+					var err_msg = TextMessage.evelevel;
+						mui.toast(err_msg, {
+						duration: 'long',
+						type: 'div'
+					});
+					return false;
+				}
 				if(evaluate_msg == ''){
 					var err_msg = TextMessage.evecommenttestnull;
 					mui.toast(err_msg, {
