交易完了页面修改

--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -68,8 +68,8 @@
 						plus.webview.close(preView);
 						mui.openWindow({
 							//id: 'transaction'
-							url: "../../transaction/transevaluate.html?transid=" + trans_id,
-						id: "transevaluate",
+							url: "../../transaction/transaction2.html?transid=" + trans_id,
+						id: "transaction",
 						extras: {
 							"transid": tid
 						}
