--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -761,6 +761,7 @@
 								duration: 'long',
 								type: 'div'
 							});
+							return false;
 						}
 						mode = 'exchange';
 						params.mode = mode;
