--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -86,6 +86,7 @@
 						<input type="hidden" id="seller_urge_r" name="seller_urge_r" value="" />
 						<input type="hidden" id="seller_urge_d" name="seller_urge_d" value="" />
 						<input type="hidden" id="seller_receipt" name="seller_receipt" value="" />
+						<input type="hidden" id="appraise" name="appraise" value="" />
 						<!--<ul class="tran-distribution change_price" style="display:none;" onclick="change_price();">
 							<li class="tran-distribution-law">
 								<a href="../main/logisticslist.html">
@@ -180,7 +181,7 @@
 				var trans_deliver = transinfo[0].deliver;
 				var trans_type = transinfo[0].trans_type;
 				var buyer_deliver, seller_deliver, buyer_urge_r, seller_urge_r, buyer_urge_d, seller_urge_d, buyer_receipt, seller_receipt;
-
+				var appraise = transinfo[0].appraise;
 				for(var u in usersinfo) {
 					if(usersinfo[u].user_id == buyer_id) {
 						buyer_deliver = usersinfo[u].deliver_flag;
@@ -209,6 +210,7 @@
 				$("#seller_urge_r").val(seller_urge_r);
 				$("#seller_urge_d").val(seller_urge_d);
 				$("#seller_receipt").val(seller_receipt);
+				$("#appraise").val(appraise);
 			}
 
 			function showTranCommodMsg(transinfo, usersinfo, commdinfo, cur_user_id) {
@@ -251,6 +253,7 @@
 					if(seller_comm_exist) {
 						seller_msg += '<a href="#">';
 						seller_msg += '<div class="mui-media-body" style="height:35px;margin-top:0px;">';
+						seller_msg += '<img height="32px" width="32px" src="' + seller_photo + '" />';
 						seller_msg += '<font size="2" vertical-align="middle">' + seller_nickname + '</font>';
 						seller_msg += '</div>';
 						if(seller_comm_info.length > 1) {
@@ -406,6 +409,7 @@
 				var trans_mode = transinfo[0].trans_mode;
 				var trans_type = transinfo[0].trans_type;
 				var deliver = transinfo[0].deliver;
+				var appraise  = transinfo[0].appraise;
 				var buyer_flag = $("#buyer_flag").val();
 				var params = {
 					"transid": trans_id
@@ -436,9 +440,19 @@
 					plus.webview.close(preView);
 					gotoMain();
 				} else if(status == 3) {
-					mui.alert(TextMessage.transSuccessMsg);
-					jumpToOtherPage('./transevaluate.html','transevaluate',trans_id);
-				} else if(status == 0) {
+					if(appraise == 1){
+						$(".tran-button").hide();
+					}else{
+						$(".tran-button-buy font").text(TextMessage.transEve);	
+					}
+				} else if(status == 9){
+					if(appraise == 1){
+						$(".tran-button").hide()
+					}else{
+						$(".tran-button-sell").hide();
+						$(".tran-button-buy font").text(TextMessage.transEve);	
+					}
+				}else if(status == 0) {
 					if(trans_mode > 0) {
 						if(buyer_flag == 'false') {
 							$(".tran-button-buy font").text(TextMessage.transConfirm);
@@ -555,6 +569,7 @@
 				var seller_urge_r = $("#seller_urge_r").val();
 				var seller_urge_d = $("#seller_urge_d").val();
 				var seller_receipt = $("#seller_receipt").val();
+				var appraise = $("#appraise").val();
 				if(status == 0) {
 					trans_flow('transRequestOrder', params,'');
 				} else if(status == 1) {
@@ -607,15 +622,27 @@
 						}
 					}
 				} else if(status == 3) {
-					gotoEvaluate(trans_id);
+					if(appraise == 0){
+						jumpToOtherPage('./transevaluate.html','transevaluate',trans_id)
+					}else{
+						return false;
+					}
 				} else if(status == 7) {
-					gotoEvaluate(trans_id);
+					if(appraise == 0){
+						jumpToOtherPage('./transevaluate.html','transevaluate',trans_id)
+					}else{
+						return false;
+					}
 				} else if(status == 8) {
 					var preView = plus.webview.getWebviewById('selectitem');
 					plus.webview.close(preView);
 					gotoMain();
 				} else if(status == 9) {
-					gotoEvaluate(trans_id);
+					if(appraise == 0){
+						jumpToOtherPage('./transevaluate.html','transevaluate',trans_id)
+					}else{
+						return false;
+					}
 				}
 			})
 
@@ -702,7 +729,7 @@
 
 			function gotoEvaluate(transid) {
 				mui.openWindow({
-					url: "./transevaluate.html?transid=" + trans_id,
+					url: "./transevaluate.html?transid=" + transid,
 					id: "transevaluate",
 					extras: {
 						"transid": transid
