--- a/kankan/pages/setting/question.html
+++ b/kankan/pages/setting/question.html
@@ -45,7 +45,7 @@
 				</div>
 				<div class="mui-button-row" style="margin-bottom: 1em;">
 					<button type="button" class="mui-btn mui-btn-primary mui-btn-outline lang" onclick="submitvals()" data-locale="suretext"></button>&nbsp;&nbsp;
-					<button type="button" class="mui-btn mui-btn-primary mui-btn-outline lang" onclick="clearallval()" data-locale="det_goodconcel"></button>
+					<button type="button" class="mui-btn mui-btn-primary mui-btn-outline lang" onclick="clearallval()" data-locale="quesreset"></button>
 				</div>
 				<!--mask-->
 		        <div class="z_mask">
