--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -65,8 +65,8 @@
 									<font size="2" vertical-align="middle" onclick="stopTransaction();">交易中止</font>
 								</div>
 							</li>
-							<li class="tran-button-middle">
-							</li>
+							<!--<li class="tran-button-middle">
+							</li>-->
 							<li class="tran-button-buy">
 								<div>
 									<font size="2" color="#FFFFF" vertical-align="middle"></font>
