注册时用户名长度限制

--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -272,6 +272,10 @@
 							plus.nativeUI.toast(TextMessage.username_null);
 							return;
 						}
+						if (username.length > 10) {
+							plus.nativeUI.toast(TextMessage.username_error);
+							return;
+						}
 						var password = doc.getElementById('password').value.trim();
 						if(password==""){
 							plus.nativeUI.toast(TextMessage.password_notnull);
