--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -178,7 +178,10 @@
 							});
 							mui.openWindow({
 								id: 'emai_summate',
-								url:"../../login/emai_summate.html"
+								url:"../../login/emai_summate.html",
+								extras: {
+									formPageName: "pro_commentslist"
+								}
 							});
 						}
 					}
