--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -69,7 +69,7 @@
 			    	}
 			    },
 			    beforeback: function() {
-			        var homePage = plus.webview.getWebviewById('pullrefresh_with_tab');
+			        var homePage = plus.webview.getWebviewById('home.html');
 					mui.fire(homePage, 'refresh',{refresh:"canRefresh"});
 			    }
 		  });  
