--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -239,11 +239,12 @@
 						showcommodity(data);
 					},
 					ng: function(data) {
-						console.log("error");
-						Log.d(data);
+						console.log(data);
 						if(data=="1000"|| data=="2002"){
 							$(".jiaoyihitext").hide();
 						}
+						Api.callback_ng(data);
+						
 					}
 				});
 			});
